--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@
     Author: BootstrapMade.com
     Author URL: https://bootstrapmade.com
 */
+/* === prettify === */
+@import url('../lib/google-code-prettify/prettify.css');
+
 h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", Helvetica, Arial, sans-serif;
 }
@@ -1029,4 +1032,42 @@ body.mobile-nav-active #mobile-nav-toggle {
   background-size: cover;
   background-position: 50% 50%;
   background-repeat: no-repeat;
+}
+.flex-direction-nav a {
+  display: block;
+  width: 40px;
+  height: 40px;
+  margin: -20px 0 0;
+  position: absolute;
+  top: 50%;
+  z-index: 10;
+  overflow: hidden;
+  opacity: 0;
+  cursor: pointer;
+  /*color: rgba(0, 0, 0, 0.8); */
+  color: rgba(74, 77, 76, 0.8);
+  text-shadow: none;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  color: #fff;
+ /* background-color: #000;*/
+  background-color: #199EB8;
+  border-radius: 50%;
+  text-align: center;
+}
+.flex-direction-nav a:before {
+  font-family: "flexslider-icon";
+  font-size: 20px;
+  display: inline-block;
+  content: '\f001';
+  color: #FFF;
+  text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
+  line-height: 40px;
+}
+.flex-direction-nav .flex-next {
+  right: -50px;
+  text-align: center;
 }
