Initial index h1 css fix

--- a/css/style.css
+++ b/css/style.css
@@ -930,7 +930,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     padding-left: 30px;
     padding-right: 30px;
   }
-  h1, h2, h3, h4, h5, h6, p, body, li { 
+  h2, h3, h4, h5, h6, p, body, li { 
     font-size: .8em; 
   }
   .table { 
