--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ p {
 
 li {
   line-height: 1.55;
-  color: #333;
+ /* color: #333; */
   font-size: 400;
   font-family: "Raleway", Helvetica, Arial, sans-serif;
 }
@@ -30,11 +30,13 @@ h1 {
 }
 
 h2 {
+  margin-top:12px;
   font-size: 48px;
   margin-bottom: 48px;
 }
 
 h3 {
+  margin-top:24px;
   font-size: 24px;
   margin-bottom: 24px;
 }
@@ -589,7 +591,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   Call-to-action Styling
   ================================================== */
 .cta {
-  background-color: #199EB8;
+  background-color: #199EB8;  
   padding: 25px 0;
 }
 
@@ -598,13 +600,14 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .cta h2,
-.cta p {
+.cta p,
+.cta li {
   color: #fff;
 }
 
 .cta p {
   margin-bottom: 0;
-  opacity: .75;
+  /*opacity: .75;*/
 }
 
 .cta .btn-ghost {
