--- a/css/style.css
+++ b/css/style.css
@@ -37,12 +37,12 @@ h2 {
 
 h3 {
   margin-top:24px;
-  font-size: 24px;
+  font-size: 36px;
   margin-bottom: 24px;
 }
 
 h4 {
-  font-size: 18px;
+  font-size: 24px;
 }
 
 .container {
@@ -707,11 +707,128 @@ body.mobile-nav-active #mobile-nav-toggle {
   visibility: visible;
 }
 
+
+/* ==================================================
+  Team Styling
+  ================================================== */
+  .base-bk h2 {
+    color: #199EB8;
+    margin-top: 24px;
+  }
+  
+  .base-bk h3 {
+    color: #199EB8;
+    margin-top: 0px;
+  }
+
+  .base-bk .col-sm-3 {
+    padding: 0;
+  }
+  
+  .base-bk .card > a {
+    display: block;
+  }
+  
+  .base-bk .card img {
+    width: 100%;
+  }
+  
+  .base-bk .card h4 {
+    color: #199EB8 ;
+    text-transform: uppercase;
+  }
+  
+  .base-bk .card p {
+    color: black;
+    opacity: .75;
+    margin: 0;
+    padding: 0 35px;
+  }
+  
+  .base-bk .card .social-nav {
+    margin-bottom: 45px;
+  }
+  
+  .base-bk .card .social-nav a {
+    color: black;
+    font-size: 16px;
+    margin: 0 4px;
+  }
+  
+  .base-bk .card .social-nav a:hover {
+    opacity: .75;
+  }
+  
+  .base-bk .card:hover .base-bk-over {
+    opacity: 1;
+    visibility: visible;
+  }
+  
+  .base-bk .card:hover .card-title-wrap {
+    background-color: #199EB8;
+  }
+  
+  .base-bk .card:hover .card-title-wrap .card-title, .base-bk .card:hover .card-title-wrap .card-text {
+    color: black;
+  }
+  
+  .base-bk .base-bk-over {
+    padding-top: 45px;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    top: 0;
+    left: 0;
+    text-align: center;
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+  }
+  
+  .base-bk .card-title-wrap {
+    padding: 15px 25px;
+    position: relative;
+    z-index: 9;
+    background-color: #fff;
+  }
+  
+  .base-bk .card-title-wrap .card-title, .base-bk .card-title-wrap .card-text {
+    font-family: "Raleway", Helvetica, Arial, sans-serif;
+    display: block;
+    margin: 0;
+  }
+  
+  .base-bk .card-title-wrap .card-title {
+    font-size: 24px;
+    color: #333;
+  }
+  
+  .base-bk .card-title-wrap .card-text {
+    font-size: 18px;
+    color: #999;
+  }
+ 
+
 /* ==================================================
   Team Styling
   ================================================== */
 .team h2 {
   color: #199EB8;
+  margin-top: 24px;
+}
+
+.team h3 {
+  color: #199EB8;
+  margin-top: 0px;
+}
+
+.team h4 {
+  color: #199EB8;
+  margin-top: 0px;
 }
 
 .team .col-sm-3 {
@@ -804,6 +921,10 @@ body.mobile-nav-active #mobile-nav-toggle {
 .team .card-title-wrap .card-text {
   font-size: 18px;
   color: #999;
+}
+
+.team .tablesmall {
+  font-size: 12px;
 }
 
 /* ==================================================
